--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 14px;
   scroll-behavior: smooth;
 }
 
@@ -13,4 +14,33 @@ html {
 a {
   text-decoration: none;
   color: #3267d6;
+}
+
+ol {
+  padding-left: 40px;
+  line-height: 25px;
+}
+
+.container {
+  width: 980px;
+  margin: 0 auto;
+  padding-top: 40px;
+}
+
+.container:last-child {
+  padding-bottom: 40px;
+}
+
+h1,
+h2 {
+  padding-bottom: 20px;
+  font-weight: 500;
+}
+
+p {
+  line-height: 25px;
+}
+
+.first-list {
+  padding-left: 15px;
 }
