--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 14px;
   scroll-behavior: smooth;
+  font-size: 14px;
+  color: #212121;
 }
 
 * {
@@ -16,15 +17,107 @@ a {
   color: #3267d6;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 ol {
   padding-left: 40px;
   line-height: 25px;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  user-select: none;
+  -webkit-user-drag: none;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  border-bottom: 1px solid #cbcbcb;
+  background: #ffffff;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.logo {
+  display: flex;
+  align-items: flex-end;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.logo h2 {
+  padding-bottom: 1px;
+  font-weight: 300;
+}
+
+figure {
+  width: 70px;
+}
+
+.tools {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+}
+
+.tools i {
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.avatar {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 16px;
+  cursor: pointer;
+  color: #ffffff;
+  background: #68a037;
+}
+
+ul {
+  display: flex;
+  gap: 10px;
+  list-style: none;
+}
+
+ul li {
+  padding: 10px 20px;
+  transition: 200ms linear;
+  cursor: pointer;
+}
+
+ul li:hover {
+  background: #eeeeee;
+}
+
+.active {
+  color: #3267d6;
+  border-bottom: 2px solid #3267d6;
 }
 
 .container {
   width: 980px;
   margin: 0 auto;
   padding-top: 40px;
+}
+
+.container:first-child {
+  padding-top: 100px;
 }
 
 .container:last-child {
@@ -35,6 +128,7 @@ h1,
 h2 {
   padding-bottom: 20px;
   font-weight: 500;
+  color: #3c4043;
 }
 
 p {
@@ -43,4 +137,9 @@ p {
 
 .first-list {
   padding-left: 15px;
+}
+
+footer {
+  min-height: 40px;
+  background: #f4f4f4;
 }
