--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ a:hover {
 }
 
 ol {
-  padding-left: 40px;
-  line-height: 25px;
+  padding-left: 15px;
+  line-height: 30px;
 }
 
 img {
@@ -54,6 +54,7 @@ header {
   align-items: flex-end;
   gap: 5px;
   cursor: pointer;
+  user-select: none;
 }
 
 .logo h2 {
@@ -85,6 +86,7 @@ figure {
   border-radius: 50%;
   font-size: 16px;
   cursor: pointer;
+  user-select: none;
   color: #ffffff;
   background: #68a037;
 }
@@ -102,7 +104,7 @@ ul li {
 }
 
 ul li:hover {
-  background: #eeeeee;
+  background: #f4f4f4;
 }
 
 .active {
@@ -140,6 +142,45 @@ p {
 }
 
 footer {
-  min-height: 40px;
   background: #f4f4f4;
+}
+
+.container-footer {
+  width: 980px;
+  min-height: 40px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.link-wrapper {
+  display: flex;
+  gap: 5px;
+  font-size: 12px;
+  color: #939393;
+}
+
+.link {
+  cursor: pointer;
+}
+
+.dot {
+  user-select: none;
+}
+
+.language {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.language i {
+  font-size: 24px;
+  color: #2c9bef;
+}
+
+.language-selection {
+  width: 180px;
+  user-select: none;
 }
